...
        Flexible(
          child: TextButton(
            onPressed: () => Navigator.of(context).push(
              MaterialPageRoute(builder: (_) => const CustomerRegisterScreen()),
            ),
            child: const Text(
              'Create Account',
              overflow: TextOverflow.ellipsis,
            ),
          ),
        ),
        Flexible(
          child: TextButton(
            onPressed: () => Navigator.of(context).push(
              MaterialPageRoute(builder: (_) => const ForgetPasswordScreen()),
            ),
            child: const Text(
              'Forgot Password?',
              overflow: TextOverflow.ellipsis,
            ),
          ),
        ),
      ],
    );
...
